# yalter-bot

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  rustfmt.toml
src/: bot.rs  main.rs  module.rs
src/modules/: admin.rs  admin.rs.in  admin_types.in.rs  demos.rs  fraktur.rs  fun.rs  hello.rs  invite.rs  modules.rs  speedruncom.rs  speedruncom_types.in.rs  wolframalpha.rs
