[package]
name = "yalter-bot"
version = "0.4.2"
authors = ["Ivan Molodetskikh <yalterz@gmail.com>"]

[dependencies]
circular-queue = "0.1"
discord = "0.8"
hldemo = "0.2"
hyper = "0.9"
lazy_static = "0.2"
rand = "0.3"
regex = "0.2"
serde = "1"
serde_derive = "1"
serde_json = "1"
url = "1"
xml-rs = "0.6"
